Zoneminder/01-zm-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zoneminder
  labels:
    app: zoneminder
  namespace: zoneminder
spec:
  selector:
    matchLabels:
      octopusexport: OctopusExport
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: zoneminder
        octopusexport: OctopusExport
    spec:
      # hostNetwork: true
      volumes:
        - name: zm-pvc
          persistentVolumeClaim:
            claimName: zm-pvc
        - name: cache-volume
          emptyDir:
            medium: Memory
      containers:
        - name: zoneminder
          image: "dlandon/zoneminder:latest"
          ports:
            - name: zm-port
              containerPort: 9000
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
          volumeMounts:
            - name: cache-volume
              mountPath: /dev/shm
              subPath: ""
            - name: zm-pvc
              mountPath: /config
              subPath: ""
            - name: zm-pvc
              mountPath: /var/cache/zoneminder
              subPath: ""
          resources:
            requests:
              memory: 4Gi
              cpu: "1"
            limits:
              memory: 8Gi
              cpu: "2"
