Zoneminder/zm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zoneminder
  namespace: default
spec:
  selector:
    matchLabels:
      octopusexport: OctopusExport
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        octopusexport: OctopusExport
    spec:
      hostNetwork: true
      volumes:
        - name: zm-pvc
          persistentVolumeClaim:
            claimName: zm-pvc
      containers:
        - name: zoneminder
          image: dlandon/zoneminder
          ports:
            - name: zm-port
              containerPort: 9000
            - name: https
              containerPort: 8443
              protocol: TCP
          volumeMounts:
            - name: zm-pvc
              mountPath: /config
              subPath: ""
            - name: zm-pvc
              mountPath: /var/cache/zoneminder
              subPath: ""
