Zoneminder/02-zm-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zoneminder
  namespace: zoneminder
spec:
  selector:
    app: zoneminder

  type: ClusterIP
  ports:
    - name: https
      port: 443
    - name: http
      port: 80
