Zoneminder/00-zm-certificate.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: zoneminder-server
  namespace: zoneminder
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`zm.roonaldo.org`)
      priority: 10
      services:
        - name: zoneminder-server
          port: 80
    - kind: Rule
      match: Host(`zm.roonaldo.org`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: zoneminder-server
          port: 80
          scheme: h2c
  tls:
    secretName: zm-tls-secret
