Zoneminder/03-zm-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zomeminder-ingress
  namespace: zoneminder
spec:
  rules:
    - host: "zm.roonaldo.org"
      http:
        paths:
          - pathType: Prefix
            path: "/zm"
            backend:
              service:
                name: zoneminder
                port:
                  number: 443

  tls:
    - hosts:
        - zm.roonaldo.org
      secretName: zm-tls-secret
