Zoneminder/zoneminder_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zoneminder
  namespace: zoneminder
spec:
  selector:
    matchLabels:
      octopusexport: OctopusExport
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        octopusexport: OctopusExport
    spec:
      hostNetwork: true
      volumes:
        - name: zm-pvc
          persistentVolumeClaim:
            claimName: zm-pvc
        - name: cache-volume
          emptyDir:
            medium: Memory
      containers:
        - name: zoneminder
          image: dlandon/zoneminder
          ports:
            - name: zm-port
              containerPort: 9000
            - name: https
              containerPort: 8443
              protocol: TCP
          volumeMounts:
            - name: cache-volume
              mountPath: /dev/shm
              subPath: ""
            - name: zm-pvc
              mountPath: /config
              subPath: ""
            - name: zm-pvc
              mountPath: /var/cache/zoneminder
              subPath: ""
          resources:
            requests:
              memory: 4Gi
              cpu: "1"
            limits:
              memory: 8Gi
              cpu: "2"
---
apiVersion: v1
kind: Service
metadata:
  name: zoneminder
  namespace: zoneminder
spec:
  selector:
    app: zoneminder

  type: ClusterIP
  ports:
    - name: https
      port: 8443

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zomeminder-ingress
  namespace: zoneminder
spec:
  rules:
    - host: "zm.roonaldo.org"
      http:
        paths:
          - pathType: Prefix
            path: "/zm"
            backend:
              service:
                name: zoneminder
                port:
                  number: 8443

  tls:
    - hosts:
        - zm.roonaldo.org
      secretName: zm-tls-secret
